# libpolymc

./: .gitignore  Cargo.toml  README.md  cbindgen.toml
.github/workflows/: build.yaml
libpolymc/: Cargo.toml
libpolymc/src/: auth.rs  error.rs  instance.rs  instances.rs  java_wrapper.rs  lib.rs
libpolymc/src/meta/: manifest.rs  minecraft.rs  mod.rs
plmc/: Cargo.toml
plmc/src/: login.rs  main.rs  run.rs  run_raw.rs  start.rs
plmc/src/meta/: index.rs  manifest.rs  minecraft.rs  mod.rs
polymc/: Cargo.toml
polymc/src/: auth.rs  config.rs  error.rs  instance.rs  java_wrapper.rs  lib.rs  main.rs  mod.rs  util.rs
polymc/src/launcher/: login.rs  mod.rs  run.rs
polymc/src/launcher/metadata/: index.rs  manifest.rs  mod.rs
polymc/src/meta/: asset.rs  index.rs  manifest.rs  mod.rs  mods.rs  request.rs
