[package]
name = "plmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polymc = { path = "../polymc" }
anyhow = "1.0.53"
clap = { version = "3.0.14", features = [ "env" ] }
log = "0.4.14"
pretty_env_logger = "0.4.0"
#serde = { version = "1.0" }
serde_json = "1.0"

tokio = { version = "1", features = ["full"] }
hyper = "0.14.17"
hyper-rustls = "0.23.0"
mktemp = "0.4.1"
