[package]
name = "polymc"
description = "A Minecraft Launcher library"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["minecraft", "launcher", "library", "java"]
workspace = "../"
authors = ["Cappy Ishihara <cappy@cappuchino.xyz>","Finn Behrens <me@kloenk.de>"]
repository = "https://github.com/korewaChino/libpolymc"

[[bin]]
name = "polymc-cli"
path = "src/main.rs"

[lib]
name = "polymc"
crate-type = [ "cdylib", "staticlib", "rlib" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = [ "ctypes" ]
# Include symbols meant for C ffi
ctypes = [ ]

[dependencies]
j4rs = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0"
serde_urlencoded = "0.7.1"
err-derive = "0.3"
log = "0.4.14"
ring = "0.16.20"
hex = "0.4.3"
zip = "0.6.2"
libc = "0.2.124"
anyhow = "1.0.53"
clap = { version = "3.0.14", features = [ "env" ] }
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
hyper = {version = "0.14.17", features = ["full"]}
hyper-rustls = "0.23.0"
mktemp = "0.4.1"
dirs = "4.0.0"
indicatif = "0.16.2"
rand = "0.8.4"
console = "0.15.0"
dotenv = "0.15.0"
webbrowser = "0.7.1"
reqwest = { version = "0.11.10", features = ["json"] }
lazy_static = "1.4.0"